--- a/src/main/resources/database/db.properties
+++ b/src/main/resources/database/db.properties
@@ -1,4 +1,4 @@
 spring.driver=com.mysql.cj.jdbc.Driver
-spring.url=jdbc:mysql://localhost:3306/lords_and_planets
-spring.username=root
-spring.password=root
+spring.url=
+spring.username=
+spring.password=
